src/objects/Housing_Application_Member__c.object
<CustomObject>
    <description>Object to store member level details for entities such as Households, Lending Companies, Property Management Companies.</description>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Role__c</fullName>
        <inlineHelpText>All Primary and Co-Applicants are non-dependent adults (18 yrs +) who will appear on Title. 

Dependent Adults must be dependents on an Applicant’s tax return. They are included here because their income/assets are counted.

Only one Primary allowed.</inlineHelpText>
        <label>Applicant Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Applicant</fullName>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
                <value>
                    <fullName>Dependent Adult</fullName>
                </value>
                <value>
                    <fullName>Dependent Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apt_Unit__c</fullName>
        <label>Apt./Unit #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Preference_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate of Preference Holder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Preference__c</fullName>
        <label>Certificate of Preference #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>Related Contact Id</description>
        <label>ContactId</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Household_Address_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you wish to copy the Household&apos;s mailing address information for this member.</inlineHelpText>
        <label>Copy Household Address Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <formula>CASE(Applicant_Role__c , &quot;Dependent Adult&quot;, &quot;Y&quot;, &quot;Dependent Minor&quot;, &quot;Y&quot;,&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_this_appear_on_another_title__c</fullName>
        <label>Does this appear on another title?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_this_member_own_land__c</fullName>
        <label>Does this member own land?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAHP_Cert_Exp_Date_Existing_Dev__c</fullName>
        <label>EAHP Cert. Exp. Date (Existing Dev.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAHP_Cert_Exp_Date_New_Dev__c</fullName>
        <label>EAHP Cert. Exp. Date (New Dev.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAHP_Certificate_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAHP Certificate Holder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAHP_Certificate_Issue_Date__c</fullName>
        <label>EAHP Certificate Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Street_Number__c &amp; &quot; &quot; &amp; Street_Name__c &amp; IF(ISPICKVAL(Street_Type__c,&quot;[Not Applicable]&quot;),&quot;&quot;, &quot; &quot; &amp; TEXT(Street_Type__c)) &amp; &quot; #&quot; &amp; Apt_Unit__c &amp; BR()

&amp; IF(Address_Line_2__c = &quot;&quot;, &quot;&quot;, Address_Line_2__c &amp; BR()) 

&amp; City__c &amp; &quot;, &quot; &amp; State__c &amp; &quot; &quot; &amp; Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Time_Student__c</fullName>
        <label>Full Time Student?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Do Not Identify as Female, Male, or Transgender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_owned_a_unit_last_3_yrs__c</fullName>
        <label>Has owned a unit (last 3 yrs)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_of_Household__c</fullName>
        <formula>ISPICKVAL(Relationship_to_Head_of_Household__c,&quot;Self&quot;)</formula>
        <label>Head of Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Homeownership_Counseling_Cert_Date__c</fullName>
        <inlineHelpText>Homeownership Counseling Certificate Date</inlineHelpText>
        <label>Homeownership Counseling Cert. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Homeownership_Counseling_Cert_Issued_By__c</fullName>
        <label>Homeownership Counseling Cert. Issued By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asian, Inc.</fullName>
                </value>
                <value>
                    <fullName>Consumer Credit Counseling Service of SF</fullName>
                </value>
                <value>
                    <fullName>Mission Economic Development Agency</fullName>
                </value>
                <value>
                    <fullName>SF Housing Development Corp.</fullName>
                </value>
                <value>
                    <fullName>SF LGBT Community Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_Application__c</fullName>
        <label>Housing Application</label>
        <referenceTo>Housing_Application__c</referenceTo>
        <relationshipLabel>Housing Application Members</relationshipLabel>
        <relationshipName>Housing_Application_Members1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>In_School__c</fullName>
        <label>In School?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Or_Work_in_San_Francisco__c</fullName>
        <label>Live Or Work in San Francisco?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Pre_Approval_Date__c</fullName>
        <label>Loan Pre-Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Pre_Approval_Issued_By__c</fullName>
        <inlineHelpText>Enter Lender Name</inlineHelpText>
        <label>Loan Pre-Approval Issued By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Married_or_Domestic_Partnered__c</fullName>
        <label>Married or Domestic Partnered?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Age__c</fullName>
        <description>Calculated age based on Date of Birth</description>
        <formula>FLOOR((TODAY() - Date_of_Birth__c)/365.2425)</formula>
        <inlineHelpText>Calculated age based on Date of Birth</inlineHelpText>
        <label>Member Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Full_Name__c</fullName>
        <formula>TEXT(Salutation__c) &amp; &quot; &quot; &amp; First_Name__c &amp; &quot; &quot; &amp; Middle_Name__c &amp; &quot; &quot; &amp; Last_Name__c  &amp; &quot; &quot; &amp; TEXT(Suffix__c)</formula>
        <label>Member Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_s_Grand_Total_Assets__c</fullName>
        <formula>Member_s_Total_Account_Asset_Value__c +  Member_s_Total_Cash_Non_Accounts__c +  Member_s_Total_Gift_Cash_Values__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member&apos;s Grand Total Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_s_Grand_Total_Incomes__c</fullName>
        <formula>Member_s_Total_Income_Employment__c +  Member_s_Total_Income_Self_Employment__c +  Member_s_Total_Other_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member&apos;s Grand Total Incomes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_s_Liquid_Assets_w_o_Retirement__c</fullName>
        <formula>Member_s_Grand_Total_Assets__c - Member_s_Total_Non_Liquid_Assets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Member&apos;s Grand Total Assets - Member&apos;s Total Non-Liquid Assets</inlineHelpText>
        <label>Member&apos;s Liquid Assets w/o Retirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_s_Total_Account_Asset_Value__c</fullName>
        <label>Member&apos;s Total Account Asset Value</label>
        <summarizedField>Housing_Application_Asset__c.Cash_or_Market_Value__c</summarizedField>
        <summaryForeignKey>Housing_Application_Asset__c.Housing_Application_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_s_Total_Cash_Non_Accounts__c</fullName>
        <label>Member&apos;s Total Cash (Non-Accounts)</label>
        <summarizedField>Housing_Application_Asset__c.Total_Cash_Not_Deposited_in_Any_Account__c</summarizedField>
        <summaryForeignKey>Housing_Application_Asset__c.Housing_Application_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_s_Total_Gift_Cash_Values__c</fullName>
        <label>Member&apos;s Total Gift Cash Values</label>
        <summarizedField>Housing_Application_Asset__c.Current_Cash_Value_of_Gift__c</summarizedField>
        <summaryForeignKey>Housing_Application_Asset__c.Housing_Application_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_s_Total_Income_Employment__c</fullName>
        <label>Member&apos;s Total Income - Employment</label>
        <summarizedField>Housing_Application_Income__c.Base_Annual_Employment_Income__c</summarizedField>
        <summaryForeignKey>Housing_Application_Income__c.Housing_Application_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_s_Total_Income_Self_Employment__c</fullName>
        <label>Member&apos;s Total Income - Self-Employment</label>
        <summarizedField>Housing_Application_Income__c.Most_Recent_Profit_or_Loss_Amount__c</summarizedField>
        <summaryForeignKey>Housing_Application_Income__c.Housing_Application_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_s_Total_Non_Liquid_Assets__c</fullName>
        <inlineHelpText>Sum of Non-Liquid Assets (Pension, IRA, Roth IRA, 401(k), 403(b), SIMPLE IRA, SEP, SARSEP, Payroll Deduction IRA, 457 Plan, 529 Plan, Other)</inlineHelpText>
        <label>Member&apos;s Total Non-Liquid Assets</label>
        <summarizedField>Housing_Application_Asset__c.Cash_or_Market_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Housing_Application_Asset__c.Retirement_Asset_Type__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Housing_Application_Asset__c.Housing_Application_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_s_Total_Other_Income__c</fullName>
        <label>Member&apos;s Total Other Income</label>
        <summarizedField>Housing_Application_Income__c.Total_Other_Income_Rec_d_Annually__c</summarizedField>
        <summaryForeignKey>Housing_Application_Income__c.Housing_Application_Member__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity_Other_details__c</fullName>
        <label>Race/Ethnicity - Other details</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity_optional__c</fullName>
        <label>Race/Ethnicity (optional)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_to_Head_of_HH_if_Other__c</fullName>
        <label>Relationship to Head of HH if &quot;Other&quot;</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Head_of_Household__c</fullName>
        <label>Relationship to Head of Household</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Registered Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Step Daughter</fullName>
                </value>
                <value>
                    <fullName>Step Son</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Step Sister</fullName>
                </value>
                <value>
                    <fullName>Step Brother</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Nephew</fullName>
                </value>
                <value>
                    <fullName>Niece</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Great Grandparent</fullName>
                </value>
                <value>
                    <fullName>Brother-In-Law</fullName>
                </value>
                <value>
                    <fullName>Daughter-In-Law</fullName>
                </value>
                <value>
                    <fullName>Father-In-Law</fullName>
                </value>
                <value>
                    <fullName>Mother-In-Law</fullName>
                </value>
                <value>
                    <fullName>Sister-In-Law</fullName>
                </value>
                <value>
                    <fullName>Son-In-Law</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type__c</fullName>
        <label>Street Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Not Applicable]</fullName>
                </value>
                <value>
                    <fullName>Alley</fullName>
                </value>
                <value>
                    <fullName>Avenue</fullName>
                </value>
                <value>
                    <fullName>Boulevard</fullName>
                </value>
                <value>
                    <fullName>Circle</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Drive</fullName>
                </value>
                <value>
                    <fullName>Highway</fullName>
                </value>
                <value>
                    <fullName>Lane</fullName>
                </value>
                <value>
                    <fullName>Loop</fullName>
                </value>
                <value>
                    <fullName>Park</fullName>
                </value>
                <value>
                    <fullName>Place</fullName>
                </value>
                <value>
                    <fullName>Plaza</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Row</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Terrace</fullName>
                </value>
                <value>
                    <fullName>Walk</fullName>
                </value>
                <value>
                    <fullName>Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Esq.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Housing Application Member</label>
    <nameField>
        <displayFormat>HA-MEM-{000000}</displayFormat>
        <label>HA-Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housing Application Members</pluralLabel>
    <recordTypes>
        <fullName>Household_Member</fullName>
        <active>true</active>
        <description>Member of the Household</description>
        <label>Household Member</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>